--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@supersami/rn-foreground-service": "^1.0.1",
     "react": "16.11.0",
-    "react-native": "0.62.0"
+    "react-native": "0.62.0",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-permissions": "^3.6.1",
+    "react-native-restart": "^0.0.24"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
